# ray_auv

./: LICENSE  README.md
auv_control/: package.xml
auv_control/launch/: pose_launch.py  wrench.yaml  wrench_launch.py
custom_thruster_manager/: CMakeLists.txt  README.md  package.xml  test_custom_tam.py  test_improved_tam.py
custom_thruster_manager/config/: custom_sliding_mode.yaml  custom_thruster_manager.yaml
custom_thruster_manager/include/custom_thruster_manager/: custom_thruster_manager.h
custom_thruster_manager/launch/: custom_sliding_mode_launch.py  simple_test.launch.py  test_custom_thruster_manager.launch.py
custom_thruster_manager/src/: custom_thruster_manager.cpp  custom_thruster_manager_node.cpp
pose_to_tf/: package.xml
ray_auv/: README.md
ray_auv/ray_control/: CMakeLists.txt  package.xml
ray_auv/ray_control/config/: anchors.yaml  cascaded_pid.yaml  custom_sliding_mode.yaml  ray.rviz  sliding_mode.yaml  thruster_manager.yaml
ray_auv/ray_control/launch/: cascaded_pids_launch.py  custom_sliding_mode_launch.py  rviz_launch.py  sliding_mode_launch.py  wrench_launch.py
ray_auv/ray_description/launch/: state_publisher_launch.py  upload_ray_launch.py  world_launch.py
ray_auv/ray_description/meshes/: ray_propccw.dae  ray_propcw.dae
ray_auv/ray_description/urdf/: ray.xacro  sensors.xacro  thrusters.xacro
ray_auv/ray_description/urdf/snippets/: all_sensor_snippets.xacro
